arreglando el registro

--- a/resources/error/403.html
+++ b/resources/error/403.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <!--Punto 9, el error 403 se da por fallos en cuanto a la autenticación o permisos -->
     <title>¡Acceso prohibido!</title>
     <link type="text/css" rel="stylesheet" href="/GameBridgeStore/resources/css/materialize.min.css" />
     <link type="text/css" rel="stylesheet" href="/GameBridgeStore/resources/css/material_icons.css" />
