--- a/resources/error/404.html
+++ b/resources/error/404.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <!--Punto 10, el error 404 se da a causa de que el archivo no ha sido encontrado-->
     <title>¡Recurso no encontrado!</title>
     <link type="text/css" rel="stylesheet" href="/GameBridgeStore/resources/css/materialize.min.css" />
     <link type="text/css" rel="stylesheet" href="/GameBridgeStore/resources/css/material_icons.css" />
